Formatting changes, bootcamp added, navbar jumping fix, youtube fix, sponsors added

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,6 +3,7 @@
 	z-index:10;
 	border-bottom: 1px solid #888;
 	position:fixed;
+	top: 0;
 	width:100%;
 	text-align: center;
 	font-size: 24px;
@@ -39,8 +40,22 @@
 	color: #3588CC;
 }
 
-.nav_logo {
+#nav_logo {
 	max-width:120px;
 	display: inline-block;
 	vertical-align: middle;
+}
+
+#nav_name {
+	font-size:30px;
+	margin-bottom:0;
+	margin-top:10px;
+	margin-left:0;
+}
+
+#nav_desc {
+	font-size:16px;
+	margin-top:0;
+	margin-left:0;
+	margin-bottom:16px;
 }
