--- a/css/site.css
+++ b/css/site.css
@@ -60,7 +60,7 @@ body {
 
 .projects_cont {
 	max-width: 1400px;
-	margin: 0 auto;
+	margin: 60px auto 0 auto;
 }
 
 .sponsor {
@@ -68,19 +68,24 @@ body {
 	display: inline-block;
 }
 
+.sponsor img {
+	opacity: 0.6;
+    filter: alpha(opacity=60);
+}
+
+.sponsor img:hover {
+	opacity: 1;
+    filter: alpha(opacity=100);
+}
+
 .sponsors_cont {
 	max-width: 1400px;
-	margin: 0 auto;
+	margin: 0 auto 40px auto;
 }
 
 #members {
 	width: 100%;
 	text-align: center;
-}
-
-#members p {
-	font-size: 50px;
-	margin-bottom: 20px;
 }
 
 #members img {
@@ -92,17 +97,9 @@ body {
 	text-align: center;
 }
 
-#whatwedo p {
-	font-size: 50px;
-}
-
 #sponsors {
 	width: 100%;
 	text-align: center;
-}
-
-#sponsors p {
-	font-size: 50px;
 }
 
 #home {
@@ -137,6 +134,11 @@ h1 {
 	margin: 0;
 }
 
+.hd {
+	font-size: 50px;
+	margin-bottom: 20px;
+}
+
 .thumb {
 	display: inline-block;
 	position: relative;
@@ -155,4 +157,34 @@ h1 {
 	margin: 0 auto;
 	display: inline-block;
 	display: inline;
+}
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -80px;
+    visibility: hidden;
+}
+
+.division {
+	border: 0;
+	height: 1px;
+	max-width: 300px;
+	margin:0 auto 30px auto;
+	background: #333;
+	background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+
+a.btn {
+	padding:20px 30px;
+	width:300px;
+	height:100px;
+	text-decoration:none;
+	background-color:lightgrey;
+	font-size:24px;
+	color:black;
+}
+
+a.btn:hover {
+	background-color:grey;
 }
